fixed mistery invisible form dialog

--- a/src/styles/FormLayout.module.css
+++ b/src/styles/FormLayout.module.css
@@ -15,7 +15,7 @@
 }
 
 .form {
-  max-width: 1150px;
+  max-width: 1200px;
   width: 100%;
   display: flex;
   flex-direction: column;
